test/typechecker.d/invalid/decls.surc.bad
f(x: Integer): Integer = fndo
	var i: Integer <- 5
	return i

m = i
